Major fixes to alignment + 2 blog posts

--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -43,7 +43,7 @@ footer img {
 }
 
 footer p {
-    margin-top: 0px;
+    margin-top: 3px;
     padding-top: 0px;
     padding-left: 84px;
 }
